tests/tooling/fixtures/native/recovery/negative/negative_bitwise_shift_bool_operand.objc3
// Expected diagnostic code(s): O3S206.
module NegativeBitwiseShiftBoolOperand;

fn main() -> i32 {
  let flag = true;
  let x = flag << 1;
  return x;
}